fixed floating bar account profile alignment

--- a/src/targets/sandman/styles/views/booking-widget.less
+++ b/src/targets/sandman/styles/views/booking-widget.less
@@ -110,6 +110,10 @@ my-account {
       border: 0;
     }
 
+    &.account-profile{
+      padding-left: 40px;
+    }
+
     &.description{
       position: relative;
       flex: none;
